# EE-python

./: .gitignore  README.md  pyproject.toml
Basics/: README.md  comments.py  datatypes.py  filesIO.py  terminal.py
Data types/: README.md  integers.py  lists.py  sets.py  tuples.py
Impedance measurement/: signal_class.py
Impedance measurement/demos/: amplitude_phase comparison demo.py  generate_sine_samples_demo.py  samples_to_time_demo.py  signal_estimate_component_demo.py  signal_plot_demo.py
Instruments/: psu.py  sdg2122x_demo.ipynb  sds3303x.py  sds3303x_demo.ipynb  setup.py  test.ipynb
Instruments/Examples/: sdg2122x_demo.ipynb  sds1104x-e_demo.ipynb  sds3303x_demo.ipynb  test.ipynb
Instruments/SDG2122X/: __init__.py  core.py  modulation.py  setup.py  utils.py  waveform.py
Instruments/SDG3303X/: __init__.py  sds3303x.py
Instruments/keysight_33512b/: __init__.py  demo_basic.py
Instruments/pySDS1104XE/: setup.py
Introduction/Basics/: errors.py  loops.py  membership.py  terminal.py
Introduction/Data types/: README.md  dictionaries.py  strings.py
Introduction/Math/: demo.ipynb  plots.ipynb  signals.ipynb
Introduction/packages_demo/: README.md
Math/: CSV plotter.ipynb  demo.ipynb  signals.ipynb
Packages demo/: README.md
Packages demo/package1/: __init__.py
Syntax/: logic.py  loops.py
archive/: README.md
archive/Impedance measurement/: util.py
archive/Instruments/: siglent_keygen.py
examples/: README.md
examples/hp_4192a/: README.md  (+12 more)
packages_demo/: main.py
scripts/: README.md  scan_keysight_gateway_gpib.py
source/: README.md
(+44 files in other folders)
