[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ee-python"
version = "0.1.0"
description = "Instrument-control code for electrical measurements."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
visa = ["pyvisa>=1.14"]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
